--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
